add api update billin add crypto payment integrate with mailleaksbot add data menu minor fix

--- a/subscriptions.yaml
+++ b/subscriptions.yaml
@@ -18,7 +18,7 @@
   price: 2000
   limit: 1000
 
-- title: 10 запроса - 6 руб
+- title: 1000 запросов – 2000р. (безлимит 6 мес.)
   price: 6
   limit: 10
 
