--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,14 @@ PyYAML = "^6.0"
 glqiwiapi = "^2.0.9"
 ujson = "^5.3.0"
 APScheduler = "^3.9.1"
+fastapi = "^0.78.0"
+uvicorn = {extras = ["standard"], version = "^0.17.6"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 mypy = "^0.960"
 hashID = "^3.1.4"
+aioredis = {extras = ["hiredis"], version = "^2.0.1"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
