--- a/config.yml
+++ b/config.yml
@@ -26,4 +26,4 @@ hash_api:
     url: https://md5decrypt.net/en/Api/api.php
     email: your_email
     code: your_code
-main_api_token: 4aq%d!/Ujt(r85ApMyS*rKcgdXCBP>C(rWFLg.7p{6<EW-'tl?95l&rZZaGmmdt
+main_api_token:
