--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ APScheduler = "^3.9.1"
 fastapi = "^0.78.0"
 uvicorn = {extras = ["standard"], version = "^0.17.6"}
 hashID = "^3.1.4"
+python-dateutil = "^2.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
